# ubc125

./: Cargo.toml  GEMINI.md  README.md  SCANNER-COMMANDS.md  flake.nix  rust-toolchain.toml
lib/grpc/proto/ubc125/v1/: services.proto
lib/grpc/rust-gen/: Cargo.toml  build.rs
lib/grpc/rust-gen/src/: lib.rs
lib/grpc/rust-gen/src/proto/: ubc125.v1.rs
src/: main.rs  scanner.rs  server.rs
src/cmd/: cli.rs  console.rs  mod.rs  serve.rs
